tests/invalid/types_5.exp
types_5.p:29: Type error: '`a' and '`b' are not the same
